Working on ByJmsFactoryTest